--- a/404.html
+++ b/404.html
@@ -4,4 +4,4 @@ description: Page not found
 title: Uh Oh - Nothing Here
 ---
 
-Oh man I hope there isn't supposed to something here.
+Oh man I hope there isn't supposed to be something here.
